# Serenity-prototypes

./: .gitignore  .gitignore.swp  README.md
BreakOut/: BreakOut.hs  Game.hs  Keyboard.hs  Models.hs
SpaceTime/: SpaceTime.cabal
SpaceTime/src/: Configuration.hs  Graphics.hs  History.hs  Main.hs  Temporal.hs  Terrain.hs  Unit.hs  Util.hs  Widget.hs  World.hs
SpaceTime/src/SpaceTime/: Configuration.hs  Graphics.hs  History.hs  Temporal.hs  Terrain.hs  Unit.hs  Util.hs  Widget.hs  World.hs
SpaceTime/testsuite/: Main.hs
SpaceTime/testsuite/Test/SpaceTime/: Configuration.hs  Graphics.hs  History.hs  Temporal.hs  Terrain.hs  Unit.hs  Util.hs  Widget.hs  World.hs
TimeTravelPrototype/: main.py
TimeTravelPrototype/prototype/: InputHandler.py  Prototype.py  Window.py
TimeTravelPrototype/prototype/game/: Map.py  Order.py  Soldier.py  Time.py  TimeLine.py  World.py
UnlimitedGameOfLife/: runme
UnlimitedGameOfLife/src/: main.py
UnlimitedGameOfLife/src/life/: handler.py  render.py  world.py
