name:          SpaceTime
version:       0.1
license-file:  LICENSE
build-type:    Simple
cabal-version: >= 1.2

executable SpaceTime
    main-is:        Main.hs
    build-depends:   
        base,
        containers,
        parsec,
        deepseq,
        array,
        astar,
        gloss == 1.7.*
    hs-source-dirs: src
    ghc-options:    -W