name:          SpaceTime
version:       0.1
license-file:  LICENSE
build-type:    Simple
cabal-version: >= 1.9.2

executable SpaceTime
    main-is:        Main.hs
    build-depends:   
        base,
        containers,
        parsec,
        deepseq,
        array,
        astar,
        gloss == 1.7.*
    hs-source-dirs: src
    ghc-options:    -W -threaded

Test-Suite TestSpaceTime
    type:           exitcode-stdio-1.0
    main-is:        Main.hs
    build-depends:  
        base, 
        test-framework,
        test-framework-quickcheck2,
        test-framework-hunit,
        QuickCheck == 2.4.*,
        containers,
        parsec,
        deepseq,
        array,
        astar,
        gloss == 1.7.*
    hs-source-dirs: testsuite, src
    ghc-options:    -W -threaded
